# cinder-tempest-plugin

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  pyproject.toml  requirements.txt  setup.cfg  tempest_blacklist.txt  test-requirements.txt  tox.ini
cinder/tests/tempest/: config.py
cinder/tests/tempest/api/volume/: test_consistencygroups.py  test_volume_revert.py
cinder/tests/tempest/services/: volume_revert_client.py
cinder_tempest_plugin/: cinder_clients.py  config.py  exceptions.py  plugin.py
cinder_tempest_plugin/api/volume/: base.py  test_consistencygroups.py  test_create_from_image.py  test_multiple_volume_from_resource.py  test_volume_backup.py  test_volume_dependency.py  test_volume_revert.py  test_volume_unicode.py
cinder_tempest_plugin/api/volume/admin/: test_consistencygroups.py  test_volume_backup.py
cinder_tempest_plugin/common/: concurrency.py
cinder_tempest_plugin/rbac/v3/: base.py  test_backups.py  test_capabilities.py  test_snapshots.py  test_user_messages.py  test_volume_actions.py  test_volume_types.py  test_volumes.py
cinder_tempest_plugin/scenario/: manager.py  test_encrypted_volume_transfer.py  test_snapshots.py  test_volume_concurrency.py  test_volume_encrypted.py  test_volume_multiattach.py
cinder_tempest_plugin/services/: __init__.py  consistencygroups_client.py  volume_revert_client.py
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
playbooks/: install-multipath.yaml  tempest-and-cinderlib-run.yaml
releasenotes/notes/: cinder-tempest-plugin-volume_image_dep_tests-ba46faab68dfb799.yaml  drop-python38-support-68f7bfafaefc8d41.yaml
releasenotes/source/: conf.py  index.rst
roles/change-devstack-data-owner/: README.rst
roles/change-devstack-data-owner/defaults/: main.yaml
roles/change-devstack-data-owner/tasks/: main.yaml
