[metadata]
name = cinder_tempest_plugin
summary = It contains tempest plugin tests for Cinder.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    cinder_tempest_plugin

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = cinder_tempest_plugin/locale
domain = cinder_tempest_plugin

[update_catalog]
domain = cinder_tempest_plugin
output_dir = cinder_tempest_plugin/locale
input_file = cinder_tempest_plugin/locale/cinder_tempest_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = cinder_tempest_plugin/locale/cinder_tempest_plugin.pot

[entry_points]
tempest.test_plugins =
    cinder_tests = cinder.tests.tempest.plugin:CinderTempestPlugin
