[metadata]
name = cinder-tempest-plugin
summary = Tempest plugin tests for Cinder.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    cinder_tempest_plugin

[entry_points]
tempest.test_plugins =
    cinder_tests = cinder_tempest_plugin.plugin:CinderTempestPlugin
