[metadata]
name = cinder-tempest-plugin
description = Tempest plugin tests for Cinder.
long_description = file: README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
url = http://www.openstack.org/
python_requires = >=3.6
classifiers =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    cinder_tempest_plugin

[entry_points]
tempest.test_plugins =
    cinder_tests = cinder_tempest_plugin.plugin:CinderTempestPlugin
